feat: TABLE WORKS
