# backend/src/CloudCrafter.Core/Interfaces/Domain/Users/IUsersService.cs
@@ -6,5 +6,5 @@ namespace CloudCrafter.Core.Interfaces.Domain.Users;
 
 public interface IUsersService
 {
-    Task<PaginatedList<UserDto>> GetUsers(PaginatedRequest<UserDto> filter);
+    Task<PaginatedList<UserDto>> GetUsers(PaginatedRequest filter);
 }
