# backend/src/CloudCrafter.Domain/Common/Pagination/PaginatedRequest.cs
@@ -4,8 +4,8 @@ using CloudCrafter.Domain.Requests.Filtering;
 
 namespace CloudCrafter.Domain.Common.Pagination;
 
-public class PaginatedRequest<TDto> : BasePaginationRequest
+public class PaginatedRequest : BasePaginationRequest
 {
-    public List<FilterCriterea> Filters { get; init; } = new List<FilterCriterea>();
+    //public List<FilterCriterea> Filters { get; init; } = new List<FilterCriterea>();
     // public SortModel[]? SortBy { get; init; }
 }
